# most-useless-editor

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
PDCurses/: CMakeLists.txt
lib/: App.h  Data.h  Editor.h  KeyHandler.h  Status.h  util.h
src/: App.h  main.cpp
